支持动态baseurl,通用header

--- a/build.gradle
+++ b/build.gradle
@@ -23,4 +23,6 @@ dependencies {
     // rx
     compile rootProject.ext.libs.rxjava2
     compile rootProject.ext.libs.rxandroid
+
+    compile project(':common')
 }
