[update] gradle 编译版本

--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,25 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.3'
-    defaultConfig {
-        minSdkVersion 15
-    }
+    compileSdkVersion 26
+
 }
 
 dependencies {
-    compile rootProject.ext.libs.okhttp3
-    compile rootProject.ext.libs.logging_interceptor
+    api rootProject.ext.libs.okhttp3
+    implementation rootProject.ext.libs.logging_interceptor
     // 调试工具类库
-    compile rootProject.ext.libs.stetho
-    compile rootProject.ext.libs.stetho_okhttp3
+    implementation rootProject.ext.libs.stetho
+    implementation rootProject.ext.libs.stetho_okhttp3
     // json解析
-    compile rootProject.ext.libs.gson
+    implementation rootProject.ext.libs.gson
     // 网络请求 retrofit
-    compile rootProject.ext.libs.retrofit
-    compile rootProject.ext.libs.converter_gson
-    compile rootProject.ext.libs.adapter_rxjava2
+    api rootProject.ext.libs.retrofit
+    implementation rootProject.ext.libs.converter_gson
+    implementation rootProject.ext.libs.adapter_rxjava2
     // rx
-    compile rootProject.ext.libs.rxjava2
-    compile rootProject.ext.libs.rxandroid
+    api rootProject.ext.libs.rxjava2
+    api rootProject.ext.libs.rxandroid
 
-    compile project(':common')
+    implementation project(':common')
 }
